errora: ensures that text is always readable.
* As requested by @GraemeWatt

--- a/hepdata/modules/theme/static/scss/errors.scss
+++ b/hepdata/modules/theme/static/scss/errors.scss
@@ -1,8 +1,11 @@
 @import "variables";
-
+.error-text-container {
+  background-color: white;
+}
 .error-container {
   position: fixed;
   bottom: 36px;
+  z-index: -1;
   width: 100%;
   border-bottom: 50px solid $lightgrey;
 
